--- a/src/assets/css/pagSobre.css
+++ b/src/assets/css/pagSobre.css
@@ -1,276 +1,3 @@
-/* FONTES DO PROJETO */
-@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
-
-/*--------------------------------------------------------------
-  # Config Geral
-  --------------------------------------------------------------*/
-
-body {
-  height: 100vh;
-  background: linear-gradient(to right, #561787, #9468a9, #6e3bc7);
-  color: white;
-}
-
-a {
-  font-family: "Montserrat", sans-serif;
-  font-weight: bolder;
-  color: grey;
-  text-decoration: none;
-}
-
-a:hover {
-  color: grey;
-  text-decoration: none;
-}
-
-li {
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-}
-
-p {
-  text-align: justify;
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-}
-
-h1 {
-  font-family: "Alfa Slab One", serif;
-}
-
-h6 {
-  font-family: "Montserrat", sans-serif;
-}
-
-#main {
-  margin-top: 20vh;
-  margin-bottom: 20vh;
-}
-
-/*--------------------------------------------------------------
-  # DarkMode Config Css
-  --------------------------------------------------------------*/
-
-.body-mode {
-  cursor: pointer;
-  /* transition: 0.2s; */
-}
-
-.body-mode.ativado {
-  background: black;
-  color: white;
-}
-
-.body-mode.ativado {
-  background: black;
-  color: white;
-}
-.body-mode.ativado .card-body {
-  background: black;
-  color: white;
-}
-
-.dropdown .dropdown-menu .dropdown-item {
-  background: white;
-  color: black;
-}
-
-.body-mode.ativado #header {
-  background-color: rgb(52, 52, 52);
-}
-.body-mode.ativado #header .navbar a,
-.navbar a:focus {
-  color: white;
-}
-
-/*--------------------------------------------------------------
-  # Acessibilidade Tamanho dos textos!
-  --------------------------------------------------------------*/
-.body-mode.active p {
-  font-size: 30px;
-  font-weight: 900;
-}
-/*--------------------------------------------------------------
-  # Header
-  --------------------------------------------------------------*/
-#header-home img {
-  max-height: 70px;
-}
-
-#header {
-  background: black;
-  box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.08);
-  z-index: 997;
-  padding: 15px 0;
-}
-
-#header .logo {
-  font-size: 32px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-#header .logo a {
-  color: #222222;
-}
-
-#header .logo img {
-  max-height: 50px;
-}
-
-@media (max-width: 992px) {
-  #header .logo {
-    font-size: 28px;
-  }
-}
-
-/*--------------------------------------------------------------
-    # Navigation Menu
-    --------------------------------------------------------------*/
-#img-home {
-  margin-left: 60px;
-}
-
-#navbar {
-  margin-right: 120px;
-}
-
-.navbar {
-  padding: 0;
-}
-
-.navbar ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  align-items: center;
-}
-
-.navbar li {
-  position: relative;
-  padding: 10px 0 10px 28px;
-}
-
-.navbar a,
-.navbar a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  color: white;
-  white-space: nowrap;
-  transition: 0.3s;
-  position: relative;
-}
-
-.navbar a i,
-.navbar a:focus i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
-}
-
-.navbar > ul > li > a:before {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: #9814c9;
-  visibility: hidden;
-  width: 0px;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.navbar a:hover:before,
-.navbar li:hover > a:before,
-.navbar .active:before {
-  visibility: visible;
-  width: 25px;
-}
-
-.navbar a:hover,
-.navbar .active,
-.navbar .active:focus,
-.navbar li:hover > a {
-  color: white;
-}
-
-.navbar .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 14px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-  border-radius: 4px;
-}
-
-.navbar .dropdown ul li {
-  min-width: 200px;
-  padding: 0;
-}
-
-.navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 15px;
-  text-transform: none;
-  font-weight: 600;
-}
-
-.navbar .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar .dropdown ul a:hover,
-.navbar .dropdown ul .active:hover,
-.navbar .dropdown ul li:hover > a {
-  color: #34b7a7;
-}
-
-.navbar .dropdown:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.navbar .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-
-.navbar .dropdown .dropdown:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-
-@media (max-width: 1366px) {
-  .navbar .dropdown .dropdown ul {
-    left: -90%;
-  }
-
-  .navbar .dropdown .dropdown:hover > ul {
-    left: -100%;
-  }
-}
-
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
@@ -292,30 +19,3 @@ h5 {
 #btns-about {
   box-shadow: 0px 0px 5px #67626d;
 }
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-#footer {
-  background: black;
-  padding: 30px 0;
-  color: white;
-  font-size: 14px;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  position: relative;
-}
-
-#footer .credits {
-  padding-top: 5px;
-  font-size: 13px;
-}
-
-#footer .credits a {
-  color: #e23ca8;
-}
-
-/*--------------------------------------------------------------
-  # Footer
-  --------------------------------------------------------------*/
